# ro-sync

./: .gitignore  .luaurc  AGENTS.md  CLAUDE.md  README.md  VERIFICATION.md  aftman.toml  app.js  bridge.js  index.html  platform.js  ro-sync.md  style.css
.github/workflows/: ci.yml  release.yml
daemon/: Cargo.toml  build.ps1  build.sh
daemon/src/: conflict.rs  diff.rs  fs_map.rs  http.rs  img_upload.rs  initial_sync.rs  main.rs  path_resolver.rs  project_config.rs  query.rs  remote.rs  snapshot.rs  sourcemap.rs  watch.rs  ws.rs
docs/: client-commands.generated.json  client-commands.md
docs/commands/: attr.json  call.json  changes.json  classinfo.json  commands.json  conflicts.json  context.json  diff.json  doctor.json  enum.json  enums.json  eval.json  find-attr.json  find.json  get.json  index.json  lint.json  logs.json  ls.json  meta.json  monetization.json  mv.json  new.json  open.json  path.json  ping.json  plan.json  props.json  query.json  redo.json  refresh.json  repair.json  resolve.json  rm.json  save.json  select.json  serve.json  services.json  set.json  snapshot.json  (+12 more)
plugin/: Plugin.luau  Plugin.rbxm  README.md  SCHEMA.md  build-plugin.mjs  build-plugin.sh
plugin-src/: README.md  plugin.project.json  wally.toml
plugin-src/src/: .gitignore  App.luau
scripts/: build-command-docs.mjs  check-platform-commands.mjs
tools/luau-lsp/: README.md
tools/luau-lsp/roblox/: globalTypes.d.luau
views/: active.js  conflicts.js  docs.js  overwrite.js  preview.js  projects.js  runtime.js  settings.js
