[package]
name = "rosync"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rosync"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros", "ws"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
notify = "9.0.0-rc.3"
notify-debouncer-full = "0.8.0-rc.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tokio-tungstenite = "0.21"
dirs = "5"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
strip = true
